# egp-crypto-exchange

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.lock.placeholder  Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_init.sql  20240102000001_futures_p2p.sql
backend/src/: config.rs  error.rs  main.rs  ws_bus.rs
backend/src/api/: admin.rs  auth.rs  futures.rs  mod.rs  p2p.rs  settings.rs  trading.rs  user.rs  wallet.rs  ws.rs
backend/src/auth/: mod.rs
backend/src/binance/: mod.rs
backend/src/db/: currencies.rs  futures.rs  manual_transactions.rs  mod.rs  orders.rs  p2p.rs  settings.rs  trades.rs  users.rs  wallets.rs
backend/src/matching_engine/: mod.rs
backend/src/models/: mod.rs
backend/src/redis/: mod.rs
backend/src/services/: mod.rs
frontend-admin/: .dockerignore  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-admin/src/: app.css  app.d.ts  app.html
frontend-admin/src/lib/: api.ts  csv.ts  format.ts  stores.ts  types.ts
frontend-admin/src/lib/components/: BarChart.svelte  DonutChart.svelte
frontend-admin/src/lib/i18n/: ar.ts
frontend-admin/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend-admin/src/routes/audit/: +page.svelte
frontend-admin/src/routes/currencies/: +page.svelte
frontend-admin/src/routes/deposits/: +page.svelte
frontend-admin/src/routes/futures-positions/: +page.svelte
frontend-admin/src/routes/liquidity/: +page.svelte
frontend-user/: .dockerignore  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-user/src/: app.css  app.html
frontend-user/src/lib/: api.ts  format.ts  stores.ts  types.ts
frontend-user/src/routes/: +layout.svelte  +layout.ts  +page.svelte
tool-results/: bash_1783115811039_58d3fc62fcee.txt  read_1783243282662_b79558199811.txt
upload/: Pasted Content_1783242620513.txt  Pasted Content_1783243263501.txt
(+32 files in other folders)
