[package]
name = "egp-exchange-backend"
version = "0.1.0"
edition = "2021"
authors = ["EGP Exchange Team"]
description = "Closed-loop EGP cryptocurrency exchange backend"

[[bin]]
name = "egp-exchange-backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tokio-stream = "0.1"
futures-util = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }
hyper = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "migrate", "macros"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "aio", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Auth
jsonwebtoken = "9.3"
bcrypt = "0.15"

# IDs & Time
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
rust_decimal_macros = "1.35"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for Binance REST fallback if needed)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utils
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
async-trait = "0.1"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
